objects/BoatReview__c.object
<CustomObject>
    <fields>
        <fullName>Boat__c</fullName>
        <label>Boat</label>
        <referenceTo>Boat__c</referenceTo>
        <relationshipLabel>Boat Reviews</relationshipLabel>
        <relationshipName>Boat_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BoatReview</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boat Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>